# python-project-template

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
notebooks/: README.md
src/: README.md
