[project]
name = "python-project-template"
version = "0.1.0"
description = "Template for Python project"
authors = [
    {name = "cloud441",email = "kevin-guillet-pro@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11, <3.12"
dependencies = [
]

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
pre-commit = "^4.1.0"
isort = "^6.0.0"
commitizen = "^4.2.2"
yamlfix = "^1.17.0"
ruff = "^0.9.7"
bandit = "^1.8.3"
mypy = "^1.15.0"
nbqa = "^1.9.1"
nbstripout = "^0.8.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
